--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
+    <footer>
+      <a lang="en" href="./"> <span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
