--- a/index.html
+++ b/index.html
@@ -20,6 +20,78 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+<main>
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <button type="button">Заказать услугу</button>
+    </section>
+    <section>
+      <h2>Сильные стороны</h2>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, qui!
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
+            dolorem.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+            deleniti?
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus,
+            dolorum.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li><img src="./images/work/" alt="Написание кода страницы"></li>
+        <li><img src="./images/work/" alt="Проработка разных дизайнов"></li>
+        <li><img src="./images/work/" alt="Подбор цветовой палитры"></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/team/" alt="Игорь Демьяненко">
+          <h3>Игорь Демьяненко</h3>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/team/" alt="Ольга Репина">
+          <h3>Ольга Репина</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/team/" alt="Николай Тарасов">
+          <h3>Николай Тарасов</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/team/" alt="Михаил Ермаков">
+          <h3>Михаил Ермаков</h3>
+          <p lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </section>
 
     <footer>
       <a lang="en" href="./"> <span>Web</span>Studio</a>
@@ -31,5 +103,6 @@
         </ul>
       </address>
     </footer>
+    </main>
   </body>
 </html>
