--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h1>Эффективные решения для вашего бизнеса</h1>
       <button type="button">Заказать услугу</button>
     </section>
+    
     <section>
       <h2>Сильные стороны</h2>
       <ul>
@@ -61,9 +62,9 @@
     <section>
       <h2>Чем мы занимаемся</h2>
       <ul>
-        <li><img src="./images/work/" alt="Написание кода страницы"></li>
-        <li><img src="./images/work/" alt="Проработка разных дизайнов"></li>
-        <li><img src="./images/work/" alt="Подбор цветовой палитры"></li>
+        <li><img src="./images/work/img1.jpg" width="370" height="294" alt="Написание кода страницы"></li>
+        <li><img src="./images/work/img2.jpg" width="370" height="294" alt="Проработка разных дизайнов"></li>
+        <li><img src="./images/work/img3.jpg" width="370" height="294" alt="Подбор цветовой палитры"></li>
       </ul>
     </section>
 
@@ -71,22 +72,22 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./images/team/" alt="Игорь Демьяненко">
+          <img src="./images/team/img-1.jpg" width="270" height="260" alt="Игорь Демьяненко">
           <h3>Игорь Демьяненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
-          <img src="./images/team/" alt="Ольга Репина">
+          <img src="./images/team/img-2.jpg" width="270" height="260" alt="Ольга Репина">
           <h3>Ольга Репина</h3>
           <p lang="en">Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/team/" alt="Николай Тарасов">
+          <img src="./images/team/img-3.jpg" width="270" height="260" alt="Николай Тарасов">
           <h3>Николай Тарасов</h3>
           <p lang="en">Marketing</p>
         </li>
         <li>
-          <img src="./images/team/" alt="Михаил Ермаков">
+          <img src="./images/team/img-4.jpg" width="270" height="260" alt="Михаил Ермаков">
           <h3>Михаил Ермаков</h3>
           <p lang="en">UI Designer</p>
         </li>
