Заменил рыбу на текст с макета

--- a/index.html
+++ b/index.html
@@ -32,28 +32,25 @@
         <li>
           <h3>Внимание к деталям</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, qui!
+            Идейные соображения, а также начало повседневной работы по формированию позиции.
           </p>
         </li>
         <li>
           <h3>Пунктуальность</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
-            dolorem.
+            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
           </p>
         </li>
         <li>
           <h3>Планирование</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
-            deleniti?
+            Равным образом консультация с широким активом в значительной степени обуславливает.
           </p>
         </li>
         <li>
           <h3>Современные технологии</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus,
-            dolorum.
+            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
           </p>
         </li>
       </ul>
